modules/SG/SecurityGroup.tf
resource "aws_security_group" "sg" {
  name        = "http_ssh_access"
  description = "SG access to ssh and http"
  vpc_id      = var.vpc_id
  tags = {
    Name = "allow_ssh_http"
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
